Use part to select CSS data

--- a/com.packtpub.e4.application/css/default.css
+++ b/com.packtpub.e4.application/css/default.css
@@ -1,7 +1,4 @@
-Shell {
-	background-color: red orange yellow blue 15% 20% 30%;
-}
-
-#com-packtpub-e4-application-part-0 {
-	background-color: blue orange yellow green 10% 20% 30%;
+.MPart {
+	background-color: red orange yellow green 15% 30% 45%;
+	
 }
