--- a/TimeBoxer/src/main/java/com/sample/ui/TimeCounterDialog.form
+++ b/TimeBoxer/src/main/java/com/sample/ui/TimeCounterDialog.form
@@ -2,6 +2,8 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
+    <Property name="title" type="java.lang.String" value="W"/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
